refactor(batching): tighten API contracts